add subtitle to chart

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
         <![endif]-->
         <div id="container">
             <h1 id="title">Professional Cyclist Doping Statistics</h1>
+            <p id="subtitle">35 Fastest times up Alpe d'Huez</p>
         </div>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
